// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReplyCreateFormWrapper /> should no alert an a disabled form when form is not contribuable 1`] = `
<div>
  <Relay(Connect(InjectIntl(ReduxForm)))
    questionnaire={
      Object {
        "contribuable": false,
      }
    }
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render an alert an a disabled form when form is contribuable and doesn't allow multiple votes and user has already votes 1`] = `
<div>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    closeLabel="Close alert"
  >
    <strong>
      <FormattedMessage
        id="reply.user_has_reply.reason"
        values={Object {}}
      />
    </strong>
    <p>
      <FormattedMessage
        id="reply.user_has_reply.error"
        values={Object {}}
      />
    </p>
  </Alert>
  <Relay(Connect(InjectIntl(ReduxForm)))
    questionnaire={
      Object {
        "contribuable": true,
        "multipleRepliesAllowed": false,
        "viewerReplies": Array [
          Object {
            "id": 326,
          },
          Object {
            "id": 289,
          },
        ],
      }
    }
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render an alert an a disabled form when form is contribuable and user is not logged in 1`] = `
<div>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    className="text-center"
    closeLabel="Close alert"
  >
    <strong>
      <FormattedMessage
        id="reply.not_logged_in.error"
        values={Object {}}
      />
    </strong>
    <Connect(RegistrationButton)
      bsStyle="primary"
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
    <Connect(LoginButton)
      style={
        Object {
          "marginLeft": 5,
        }
      }
    />
  </Alert>
  <Relay(Connect(InjectIntl(ReduxForm)))
    questionnaire={
      Object {
        "contribuable": true,
        "multipleRepliesAllowed": true,
        "viewerReplies": Array [
          Object {
            "id": 289,
          },
        ],
      }
    }
  />
</div>
`;

exports[`<ReplyCreateFormWrapper /> should render no alert an an enabled form 1`] = `
<div>
  <Relay(Connect(InjectIntl(ReduxForm)))
    questionnaire={
      Object {
        "contribuable": true,
        "multipleRepliesAllowed": true,
        "viewerReplies": Array [
          Object {
            "id": 289,
          },
        ],
      }
    }
  />
</div>
`;
